# Entari

./: .gitignore  README.md  entari.schema.json  entari.yml  example.schema.json  example.yml  example_plugin.py  example_reusable.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-merge.yml
arclet/edoves/: __init__.py
arclet/edoves/builtin/: __init__.py  actions.py  alconna.py  behavior.py  chatlog.py  client.py  combiner.py  commander.py  filter.py  medium.py
arclet/edoves/builtin/event/: __init__.py  lifecycle.py  message.py  network.py  notice.py
arclet/edoves/builtin/mah/: __init__.py  actions.py  chain.py  filter.py  medium.py  messages.py  monomers.py  protocol.py  server_docker.py  types.py
arclet/edoves/builtin/mah/module/: message.py
arclet/edoves/builtin/message/: chain.py
arclet/edoves/builtin/timer/: __init__.py
arclet/edoves/mah/: __init__.py  actions.py  chain.py  elements.py  filter.py  messages.py  monomers.py  protocol.py  server_docker.py  types.py
arclet/edoves/mah/module/: __init__.py  message.py
arclet/edoves/mah/parsers/: __init__.py  message.py  request.py
arclet/edoves/mah/parsers/notice/: __init__.py  bot.py  friend.py  group.py  member.py
arclet/edoves/main/: __init__.py  action.py  behavior.py  component.py  config.py  context.py  event.py  exceptions.py  interact.py  medium.py  module.py  monomer.py  network.py  parser.py  protocol.py  scene.py  screen.py  server_docker.py  typings.py
arclet/edoves/main/component/: __init__.py
arclet/edoves/main/interact/: __init__.py  module.py  monomer.py  parser.py  server_docker.py
arclet/edoves/main/message/: chain.py  element.py
arclet/edoves/main/utilles/: __init__.py  combiner.py  data_model.py  event_filter.py  logger.py  security.py
arclet/edoves/message/: chain.py  element.py
arclet/edoves/utilles/: __init__.py  data_model.py  data_source_info.py  event_filter.py  logger.py  security.py
arclet/entari/: __init__.py  __main__.py  _subscriber.py  command.py  config.py  const.py  core.py  event.py  exceptions.py  filter.py  localdata.py  logger.py  message.py  plugin.py  scheduler.py  session.py  util.py  utils.py
arclet/entari/builtins/: auto_reload.py  chuck_norris.py  control.py  database.py  echo.py  help.py  lang.py  model.py  pipe.py  pyd.py  translate.py
arclet/entari/builtins/config/: toml.py
arclet/entari/builtins/inspect/: README.md  __init__.py
arclet/entari/builtins/inspect/i18n/: .config.json  .lang.schema.json  .template.json  de-DE.json  en-UK.json  fr-FR.json  ja-JP.json  model.py  ru-RU.json  zh-CN.json  zh-TW.json
arclet/entari/command/: __init__.py  argv.py  main.py  model.py  plugin.py  provider.py
arclet/entari/config/: __init__.py  action.py  dc_schema.py  env.py  file.py  model.py  util.py
arclet/entari/config/format/: toml.py
arclet/entari/config/models/: default.py  msgspec_.py  pyd.py
arclet/entari/event/: __init__.py  api.py  base.py  command.py  config.py  lifespan.py  plugin.py  protocol.py  send.py  session.py
arclet/entari/filter/: __init__.py  common.py  message.py  op.py  parse.py
arclet/entari/plugin/: __init__.py  model.py  model.pyi  module.py  service.py
arclet/entari/plugins/: auto_reload.py
arclet/entari/utils/: local_data.py
edoves/: data_source_info.py  logger.py  security.py  utilles.py
edoves/builtin/: client.py  commander.py  medium.py
edoves/builtin/behaviours/: __init__.py
edoves/builtin/mah/: __init__.py  dock_server.py  medium.py  messages.py  protocol.py  server_docker.py  types.py
edoves/builtin/mah/module/: __init__.py  message.py
edoves/main/: __init__.py  behavior.py  component.py  config.py  controller.py  dock_server.py  event.py  exceptions.py  interact.py  medium.py  module.py  monomer.py  network.py  protocol.py  scene.py  server_docker.py  typings.py
edoves/message/: chain.py  element.py
edoves/utilles/: __init__.py  data_model.py  data_source_info.py  logger.py  security.py
example_plugin2/: __init__.py
example_plugin4/: __init__.py
example_plugin4/foo/: bar.py
example_plugins/: example_plugin3.py
example_plugins/example_plugin2/: __init__.py  command.py
example_plugins/example_plugin5/: __init__.py
example_plugins/example_plugin5/foo/: bar.py
example_plugins/example_plugin5/tools/: qux.py
example_plugins/example_plugin6/: __init__.py  config.py
example_plugins/example_plugin6/foo/: __init__.py  bar.py  utils.py
old/arclet/edoves/: __init__.py
old/arclet/edoves/builtin/: __init__.py  actions.py  alconna.py  behavior.py  client.py  commander.py  filter.py  medium.py
old/arclet/edoves/builtin/event/: __init__.py  lifecycle.py  message.py  network.py  notice.py
old/arclet/edoves/builtin/message/: __init__.py  chain.py  element.py
old/arclet/edoves/builtin/timer/: __init__.py  timers.py
old/arclet/edoves/mah/: __init__.py  actions.py  chain.py  elements.py  filter.py  monomers.py  protocol.py  server_docker.py
old/arclet/edoves/mah/module/: message.py
old/arclet/edoves/mah/parsers/: __init__.py  message.py  request.py
old/arclet/edoves/mah/parsers/notice/: __init__.py  bot.py  friend.py  group.py  member.py
old/arclet/edoves/main/: __init__.py  action.py  config.py  context.py  context.pyi  event.py  exceptions.py  medium.py  network.py  protocol.py  scene.py  screen.py  typings.py
old/arclet/edoves/main/component/: __init__.py  behavior.py
old/arclet/edoves/main/interact/: __init__.py  module.py  monomer.py  parser.py  server_docker.py
old/arclet/edoves/main/utilles/: __init__.py  combiner.py  data_model.py  data_source_info.py  event_filter.py  logger.py  security.py
