[project]
name = "arclet-entari"
version = "0.7.0"
description = "Simple IM Framework based on satori-python"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "arclet-letoderea>=0.11.0",
    "arclet-alconna>=1.8.30",
    "satori-python-core>=0.15.0rc2",
    "satori-python-client>=0.15.0rc2",
    "arclet-alconna-tools>=0.7.3",
    "pygtrie>=2.5.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.build]
includes = ["arclet"]

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.4.2",
    "ruff>=0.4.2",
    "fix-future-annotations>=0.5.0",
    "watchfiles>=0.24.0",
]
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["arclet/**.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402", "PYI055"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.pdm.scripts]
test = "pytest -v -n auto -W ignore ./tests/"
format = { composite = ["isort ./arclet/","black ./arclet/","ruff check ./arclet/"] }
