[project]
name = "arclet-entari"
dynamic = ["version"]
description = "Simple IM Framework based on satori-python"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "arclet-letoderea<0.19.0,>=0.18.1",
    "arclet-alconna<2.0.0,>=1.8.42",
    "satori-python-core>=0.15.2",
    "satori-python-client>=0.15.2",
    "arclet-alconna-tools>=0.7.3",
    "nonestorage>=0.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://arclet.top"
repository = "https://github.com/ArcletProject/Entari"

[project.optional-dependencies]
yaml = [
    "ruamel-yaml>=0.18.10",
]
cron = [
    "croniter>=5.0.1",
]
reload = [
    "watchfiles>=1.0.3",
]
dotenv = [
    "python-dotenv>=1.0.1",
]
full = [
    "croniter>=5.0.1",
    "watchfiles>=1.0.3",
    "python-dotenv>=1.0.1",
    "ruamel-yaml>=0.18.10",
    "entari-cli>=0.1.0",
]
pydantic = [
    "pydantic>=2.10.6",
]
msgspec = [
    "msgspec>=0.19.0",
]
toml = [
    "tomlkit>=0.13.3",
]
cli = [
    "entari-cli>=0.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.build]
includes = ["arclet"]

[tool.pdm.version]
source = "file"
path = "arclet/entari/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.4.2",
    "ruff>=0.4.2",
    "fix-future-annotations>=0.5.0",
    "watchfiles>=0.24.0",
    "python-dotenv>=1.0.1",
    "ruamel-yaml>=0.18.10",
    "msgspec>=0.19.0",
    "pydantic>=2.10.6",
    "tomlkit>=0.13.3",
]
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["arclet/**.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402", "PYI055"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.pdm.scripts]
test = "pytest -v -n auto -W ignore ./tests/"
format = { composite = ["isort ./arclet/","black ./arclet/","ruff check ./arclet/"] }
